Fixed some html and added react

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -27,24 +27,24 @@
   cx="480" cy="480">
 </ellipse>
 </svg>
-<div class="PeterBuild_Class">
-  <span>PeterBuild</span>
-</div>
+<p class="PeterBuild_Class">
+  PeterBuild
+  </p>
 <div class="header_text_Class">
   <span>Ik ben Peter Püttmann, 57 jaar.<br />Ik hou van het maken met hout.</span>
 </div>
 </header>
 <main>
-  <section>
-    <img style="position:absolute;left:-54px;top:1072px;overflow:visible;" class="about_Class" src="about.png"
-    srcset="about.png 1x, about@2x.png 2x">
-    <div class="NIET_ALLEEN_EEN_TIMMERMAN_Class">
-      <span>NIET ALLEEN EEN<br />TIMMERMAN</span>
-    </div>
-    <div class="In_mijn_studietijd_ben_ik_in_S_Class">
-      <p>In mijn studietijd ben ik in Schoonhoven opgeleid <br />als edelsmid, hoewel ik hier niet actief mee aan
-        de slag <br />ben gegaan ben ik altijd creatief bezig geweest.</p>
-      </div>
+  <section class="about">
+    <!--<img style="position:absolute;left:-54px;top:1072px;overflow:visible;" class="about_Class" src="about.png"
+    srcset="about.png 1x, about@2x.png 2x">-->
+    <p class="NIET_ALLEEN_EEN_TIMMERMAN_Class">
+      NIET ALLEEN EEN<br/>TIMMERMAN
+    </p>
+      <p class="InfoAbout">
+        In mijn studietijd ben ik in Schoonhoven opgeleid <br />als edelsmid, hoewel ik hier niet actief mee aan
+        de slag <br />ben gegaan ben ik altijd creatief bezig geweest.
+      </p>
       <div class="feedback">
         <p class="percentage">
           95%
