--- a/vite-porject/svg.html
+++ b/vite-porject/svg.html
@@ -8,7 +8,7 @@
     </svg><br><br><br><svg width="150" height="333">
         <line stroke-dasharray="5, 5" x1="0" y1="10" x2="0" y2="755" style="stroke: #00eafa; stroke-width: 6;"></line>
     </svg><br><br><br> <svg width="7" height="150">
-        <line stroke-dasharray="5, 5" x1="5" y1="10" x2="10" y2="300" style="stroke: #00eafa; stroke-width: 6;"></line>
+        <line stroke-dasharray="5, 5" x1="0" y1="5" x2="150" y2="5" style="stroke: #00eafa; stroke-width: 6;" transform='rotate(90)'></line>
     </svg>
 </body>
 
