Fixed some html and added react

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -29,171 +29,76 @@
 </svg>
 <p class="PeterBuild_Class">
   PeterBuild
-  </p>
+</p>
 <div class="header_text_Class">
   <span>Ik ben Peter Püttmann, 57 jaar.<br />Ik hou van het maken met hout.</span>
 </div>
 </header>
 <main>
   <section class="about">
-    <!--<img style="position:absolute;left:-54px;top:1072px;overflow:visible;" class="about_Class" src="about.png"
-    srcset="about.png 1x, about@2x.png 2x">-->
-    <p class="NIET_ALLEEN_EEN_TIMMERMAN_Class">
+    <p class="about_header">
       NIET ALLEEN EEN<br/>TIMMERMAN
     </p>
-      <p class="InfoAbout">
-        In mijn studietijd ben ik in Schoonhoven opgeleid <br />als edelsmid, hoewel ik hier niet actief mee aan
-        de slag <br />ben gegaan ben ik altijd creatief bezig geweest.
-      </p>
-      <div class="feedback">
-        <p class="percentage">
-          95%
-        </p>
-        <p class="percentage">
-          95%
-        </p>
-        <p class="percentage">
-          95%
-        </p>
-        <div class="van_de_klanten_vind__geeft_ons_Class">
-          <span>van de klanten vind<br /> geeft ons een 10!</span>
-        </div>
-        <div class="van_de_klanten_vind__geeft_ons_z_Class">
-          <span>van de klanten vind<br /> geeft ons een 10!</span>
-        </div>
-        <div class="van_de_klanten_vind__geeft_ons__Class">
-          <span>van de klanten vind<br /> geeft ons een 10!</span>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="LAATSTE_PROJECTEN_Class">
-        <span>LAATSTE<br />PROJECTEN</span>
+    <p class="InfoAbout">
+      In mijn studietijd ben ik in Schoonhoven opgeleid <br />als edelsmid, hoewel ik hier niet actief mee aan
+      de slag <br />ben gegaan ben ik altijd creatief bezig geweest.
+    </p>
+    <div class="feedback">
+      <div>
+        <p>95%</p>
+        <span>van de klanten vind<br /> geeft ons een 10!</span>
       </div>
       <div>
-        <svg width="7" height="100" style="position: absolute;overflow: visible;left: 958px;top: 2758px;">
-          <line stroke-dasharray="5, 5" x1="5" y1="10" x2="10" y2="200" style="stroke: #00eafa; stroke-width: 6;"></line>
-        </svg>
-        <!--
-        <svg class="Rectangle_1">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1__Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_ba">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_ba_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bb">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bb_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bc">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bc_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bd">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bd_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_be">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_be_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bf">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bf_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bg">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bg_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bh">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bh_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bi">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bi_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bj">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bj_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bk">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bk_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bl">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bl_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bm">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bm_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bn">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bn_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bo">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bo_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bp">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bp_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bq">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bq_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_br">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_br_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg>
-        <svg class="Rectangle_1_bs">
-          <rect fill="rgba(0,234,250,1)" class="Rectangle_1_bs_Class" rx="0" ry="0" x="0" y="0" width="4" height="4">
-          </rect>
-        </svg> -->
+        <p>95%</p>
+        <span>van de klanten vind<br /> geeft ons een 10!</span>
       </div>
-      <div class="PROJECT_TITLE__Class">
-        <span>PROJECT<br />TITLE </span>
+      <div>
+        <p>95%</p>
+        <span>van de klanten vind<br /> geeft ons een 10!</span>
       </div>
-      <img style="position:absolute;width:326px;height:500px;left:401px;top:2940px;overflow:visible;"
-      class="project_Class" src="project.png" srcset="project.png 1x, project@2x.png 2x">
-      <svg class="Line_1" viewBox="0 0 326 5">
-        <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-        stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_1_Class" d="M 0 0 L 326 0">
-      </path>
+    </div>
+  </section>
+  <section>
+    <span class="header_projecten">
+      LAATSTE<br/>PROJECTEN
+    </span>
+    <svg width="7" height="100" style="position: absolute;overflow: visible;left: 958px;top: 2758px;">
+      <line stroke-dasharray="5, 5" x1="0" y1="5" x2="150" y2="5" style="stroke: #00eafa; stroke-width: 6;" transform='rotate(90)'></line>
     </svg>
-    <div class="PROJECT_TITLE__bq_Class">
+    <div class="PROJECT_TITLE__Class">
       <span>PROJECT<br />TITLE </span>
     </div>
-    <img style="position:absolute;width:326px;height:500px;left:1193px;top:2940px;overflow:visible;"
-    class="project_br_Class" src="project_br.png" srcset="project_br.png 1x, project_br@2x.png 2x">
-    <svg class="Line_2" viewBox="0 0 326 5">
+    <img style="position:absolute;width:326px;height:500px;left:401px;top:2940px;overflow:visible;"
+    class="project_Class" src="project.png" srcset="project.png 1x, project@2x.png 2x">
+    <svg class="Line_1" viewBox="0 0 326 5">
       <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_2_Class" d="M 0 0 L 326 0">
+      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_1_Class" d="M 0 0 L 326 0">
     </path>
   </svg>
-  <div class="PROJECT_TITLE__bt_Class">
+  <div class="PROJECT_TITLE__bq_Class">
     <span>PROJECT<br />TITLE </span>
   </div>
-  <img style="position:absolute;width:326px;height:500px;left:797px;top:3106px;overflow:visible;"
-  class="project_bu_Class" src="project_bu.png" srcset="project_bu.png 1x, project_bu@2x.png 2x">
-  <svg class="Line_3" viewBox="0 0 326 5">
+  <img style="position:absolute;width:326px;height:500px;left:1193px;top:2940px;overflow:visible;"
+  class="project_br_Class" src="project_br.png" srcset="project_br.png 1x, project_br@2x.png 2x">
+  <svg class="Line_2" viewBox="0 0 326 5">
     <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_3_Class" d="M 0 0 L 326 0">
+    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_2_Class" d="M 0 0 L 326 0">
   </path>
+</svg>
+<div class="PROJECT_TITLE__bt_Class">
+  <span>PROJECT<br />TITLE </span>
+</div>
+<img style="position:absolute;width:326px;height:500px;left:797px;top:3106px;overflow:visible;"
+class="project_bu_Class" src="project_bu.png" srcset="project_bu.png 1x, project_bu@2x.png 2x">
+<svg class="Line_3" viewBox="0 0 326 5">
+  <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
+  stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_3_Class" d="M 0 0 L 326 0">
+</path>
 </svg>
 </section>
 <section>
   <img style="position:absolute;width:1761px;height:1080px;left:80px;top:3570px;overflow:visible;"
-  class="about_2_Class" src="about_2.png" srcset="about_2.png 1x, about_2@2x.png 2x">
+  class="about_2_Class" src="diensten.png">
   <div class="DIENSTEN_Class">
     <span>DIENSTEN</span>
   </div>
@@ -222,9 +127,9 @@
       </section>
     </main>
     <footer>
-      <div class="CONTACT_Class">
-        <span>CONTACT</span>
-      </div>
+      <h1 class="CONTACT_Class">
+        CONTACT
+      </h1>
       <svg class="Naam" viewBox="0 0 365 1">
         <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
         stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Naam_Class" d="M 365 0 L 0 0">
