--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -59,9 +59,7 @@
     </div>
   </section>
   <section>
-    <span class="header_projecten">
-      LAATSTE<br/>PROJECTEN
-    </span>
+    <h1 class="ProjectenHeader">LAATSTE<br/>PROJECTEN</h1>
     <svg width="7" height="100" style="position: absolute;overflow: visible;left: 958px;top: 2758px;">
       <line stroke-dasharray="5, 5" x1="0" y1="5" x2="150" y2="5" style="stroke: #00eafa; stroke-width: 6;" transform='rotate(90)'></line>
     </svg>
