--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -58,95 +58,82 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="projecten">
     <h1 class="ProjectenHeader">LAATSTE<br/>PROJECTEN</h1>
     <svg width="7" height="100" style="position: absolute;overflow: visible;left: 958px;top: 2758px;">
       <line stroke-dasharray="5, 5" x1="0" y1="5" x2="150" y2="5" style="stroke: #00eafa; stroke-width: 6;" transform='rotate(90)'></line>
     </svg>
-    <div class="PROJECT_TITLE__Class">
-      <span>PROJECT<br />TITLE </span>
-    </div>
-    <img style="position:absolute;width:326px;height:500px;left:401px;top:2940px;overflow:visible;"
-    class="project_Class" src="project.png" srcset="project.png 1x, project@2x.png 2x">
-    <svg class="Line_1" viewBox="0 0 326 5">
-      <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_1_Class" d="M 0 0 L 326 0">
-    </path>
-  </svg>
-  <div class="PROJECT_TITLE__bq_Class">
-    <span>PROJECT<br />TITLE </span>
-  </div>
-  <img style="position:absolute;width:326px;height:500px;left:1193px;top:2940px;overflow:visible;"
-  class="project_br_Class" src="project_br.png" srcset="project_br.png 1x, project_br@2x.png 2x">
-  <svg class="Line_2" viewBox="0 0 326 5">
-    <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_2_Class" d="M 0 0 L 326 0">
-  </path>
-</svg>
-<div class="PROJECT_TITLE__bt_Class">
-  <span>PROJECT<br />TITLE </span>
-</div>
-<img style="position:absolute;width:326px;height:500px;left:797px;top:3106px;overflow:visible;"
-class="project_bu_Class" src="project_bu.png" srcset="project_bu.png 1x, project_bu@2x.png 2x">
-<svg class="Line_3" viewBox="0 0 326 5">
-  <path fill="transparent" stroke="rgba(44,127,211,1)" stroke-width="5px" stroke-linejoin="miter"
-  stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Line_3_Class" d="M 0 0 L 326 0">
-</path>
-</svg>
-</section>
-<section>
-  <img style="position:absolute;width:1761px;height:1080px;left:80px;top:3570px;overflow:visible;"
-  class="about_2_Class" src="diensten.png">
-  <div class="DIENSTEN_Class">
-    <span>DIENSTEN</span>
-  </div>
-  <div class="CREATIVITEIT_Class">
-    <span>CREATIVITEIT</span>
-  </div>
-  <div class="TIMMEREN_Class">
-    <span>TIMMEREN</span>
-  </div>
-  <div class="MANAGEMENT_Class">
-    <span>MANAGEMENT</span>
-  </div>
-  <div class="Momenteel_werk_ik__voornamelij_Class">
-    <span>Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
-      metaal <br />gaan verwerken.</span>
-    </div>
-    <div class="Ook_voor_kleine_klussen_in__en_Class">
-      <span>Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
-        ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
-        weten.</span>
+    <section class="protofolio">
+      <div>
+        <h1>PROJECT<br/>TITEL</h1>
+        <svg class="Line_1"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img class="project_Class" src="project.png">
       </div>
-      <div class="Tijdens_mijn_loopbaan_ben_ik___Class">
-        <span>Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
-          werkzaam als<br /> contractmanager en <br />business analist.</span>
+      <div>
+        <h1>PROJECT<br/>TITEL</h1>
+        <svg class="Line_2"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img class="project_br_Class" src="project_br.png">
+      </div>
+      <div>
+        <h1>PROJECT<br/>TITEL</h1>
+        <svg class="Line_3"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img class="project_bu_Class" src="project_bu.png">
+      </div>
+    </section>
+  </section>
+  <section>
+    <img style="position:absolute;width:100vw;height:1080px;left:80px;top:3570px;overflow:visible;"
+    class="about_2_Class" src="diensten.png">
+    <div class="DIENSTEN_Class">
+      <span>DIENSTEN</span>
+    </div>
+    <div class="CREATIVITEIT_Class">
+      <span>CREATIVITEIT</span>
+    </div>
+    <div class="TIMMEREN_Class">
+      <span>TIMMEREN</span>
+    </div>
+    <div class="MANAGEMENT_Class">
+      <span>MANAGEMENT</span>
+    </div>
+    <div class="Momenteel_werk_ik__voornamelij_Class">
+      <span>Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
+        metaal <br />gaan verwerken.</span>
+      </div>
+      <div class="Ook_voor_kleine_klussen_in__en_Class">
+        <span>Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
+          ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
+          weten.</span>
         </div>
-      </section>
-    </main>
-    <footer>
-      <h1 class="CONTACT_Class">
-        CONTACT
-      </h1>
-      <svg class="Naam" viewBox="0 0 365 1">
+        <div class="Tijdens_mijn_loopbaan_ben_ik___Class">
+          <span>Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
+            werkzaam als<br /> contractmanager en <br />business analist.</span>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <h1 class="CONTACT_Class">
+          CONTACT
+        </h1>
+        <svg class="Naam" viewBox="0 0 365 1">
+          <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
+          stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Naam_Class" d="M 365 0 L 0 0">
+        </path>
+      </svg>
+      <svg class="E_mail" viewBox="0 0 365 1">
         <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-        stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Naam_Class" d="M 365 0 L 0 0">
+        stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="E_mail_Class" d="M 0 0 L 365 0">
       </path>
     </svg>
-    <svg class="E_mail" viewBox="0 0 365 1">
+    <svg class="Onderwerp" viewBox="0 0 791 1">
       <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="E_mail_Class" d="M 0 0 L 365 0">
+      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Onderwerp_Class" d="M 0 0 L 791 0">
     </path>
   </svg>
-  <svg class="Onderwerp" viewBox="0 0 791 1">
+  <svg class="Bericht" viewBox="0 0 791 1">
     <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Onderwerp_Class" d="M 0 0 L 791 0">
+    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Bericht_Class" d="M 0 0 L 791 0">
   </path>
-</svg>
-<svg class="Bericht" viewBox="0 0 791 1">
-  <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-  stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Bericht_Class" d="M 0 0 L 791 0">
-</path>
 </svg>
 <div class="Naam_b_Class">
   <span>Naam</span>
