--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -60,10 +60,11 @@
   </section>
   <section class="projecten">
     <h1 class="ProjectenHeader">LAATSTE<br/>PROJECTEN</h1>
-    <svg width="7" height="100" style="position: absolute;overflow: visible;left: 958px;top: 2758px;">
+    <svg width="7" height="100" style="overflow: visible;padding: 10px;">
       <line stroke-dasharray="5, 5" x1="0" y1="5" x2="150" y2="5" style="stroke: #00eafa; stroke-width: 6;" transform='rotate(90)'></line>
     </svg>
-    <section class="protofolio">
+    <br>
+    <div class="protofolio">
       <div>
         <h1>PROJECT<br/>TITEL</h1>
         <svg class="Line_1"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
@@ -79,7 +80,7 @@
         <svg class="Line_3"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
         <img class="project_bu_Class" src="project_bu.png">
       </div>
-    </section>
+    </div>
   </section>
   <section>
     <img style="position:absolute;width:100vw;height:1080px;left:80px;top:3570px;overflow:visible;"
