Fixed some html and added react

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -67,49 +67,48 @@
     <div class="protofolio">
       <div>
         <h1>PROJECT<br/>TITEL</h1>
-        <svg class="Line_1"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img class="project_Class" src="project.png">
+        <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img src="project.png">
       </div>
       <div>
         <h1>PROJECT<br/>TITEL</h1>
-        <svg class="Line_2"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img class="project_br_Class" src="project_br.png">
+        <svg ><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img src="project_br.png">
       </div>
       <div>
         <h1>PROJECT<br/>TITEL</h1>
-        <svg class="Line_3"><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img class="project_bu_Class" src="project_bu.png">
+        <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
+        <img src="project_bu.png">
       </div>
     </div>
   </section>
-  <section>
-    <img style="position:absolute;width:100vw;height:1080px;left:80px;top:3570px;overflow:visible;"
-    class="about_2_Class" src="diensten.png">
-    <div class="DIENSTEN_Class">
-      <span>DIENSTEN</span>
-    </div>
-    <div class="CREATIVITEIT_Class">
-      <span>CREATIVITEIT</span>
-    </div>
-    <div class="TIMMEREN_Class">
-      <span>TIMMEREN</span>
-    </div>
-    <div class="MANAGEMENT_Class">
-      <span>MANAGEMENT</span>
-    </div>
-    <div class="Momenteel_werk_ik__voornamelij_Class">
-      <span>Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
-        metaal <br />gaan verwerken.</span>
-      </div>
-      <div class="Ook_voor_kleine_klussen_in__en_Class">
-        <span>Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
-          ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
-          weten.</span>
+  <section class="diensten">
+    <!-- <img style="position:absolute;width:100vw;height:1080px;left:80px;top:3570px;overflow:visible;"
+      class="about_2_Class" src="diensten.png"> -->
+      <h1 class="dienst_header">DIENSTEN</h1>
+      <section class="kwaliteiten">
+        <div>
+          <h2 class="CREATIVITEIT_Class">CREATIVITEIT</h2>
+          <p class="Momenteel_werk_ik__voornamelij_Class">
+            Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
+            metaal <br />gaan verwerken.
+          </p>
         </div>
-        <div class="Tijdens_mijn_loopbaan_ben_ik___Class">
-          <span>Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
-            werkzaam als<br /> contractmanager en <br />business analist.</span>
+        <div>
+          <h2 class="TIMMEREN_Class">TIMMEREN</h2>
+          <p class="Ook_voor_kleine_klussen_in__en_Class">
+            Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
+            ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
+            weten.</p>
           </div>
+          <div>
+            <h2 class="MANAGEMENT_Class">MANAGEMENT</h2>
+            <p class="Tijdens_mijn_loopbaan_ben_ik___Class">
+              Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
+              werkzaam als<br /> contractmanager en <br />business analist.</p>
+            </div>
+          </section>
+          
         </section>
       </main>
       <footer>
