Fixed some cnetering problems

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -83,27 +83,33 @@
     </div>
   </section>
   <section class="diensten">
-    <!-- <img style="position:absolute;width:100vw;height:1080px;left:80px;top:3570px;overflow:visible;"
-      class="about_2_Class" src="diensten.png"> -->
       <h1 class="dienst_header">DIENSTEN</h1>
       <section class="kwaliteiten">
         <div>
-          <h2 class="CREATIVITEIT_Class">CREATIVITEIT</h2>
-          <p class="Momenteel_werk_ik__voornamelij_Class">
+          <h2>CREATIVITEIT</h2>
+          <br>
+          <br>
+          <p>
             Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
             metaal <br />gaan verwerken.
           </p>
         </div>
         <div>
-          <h2 class="TIMMEREN_Class">TIMMEREN</h2>
-          <p class="Ook_voor_kleine_klussen_in__en_Class">
+         
+          <h2>TIMMEREN</h2>
+          <br>
+          <br>
+          <p>
             Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
             ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
             weten.</p>
           </div>
           <div>
-            <h2 class="MANAGEMENT_Class">MANAGEMENT</h2>
-            <p class="Tijdens_mijn_loopbaan_ben_ik___Class">
+            <img src="managemtn.png" alt="MANAGEMENT_icon">
+            <h2>MANAGEMENT</h2>
+            <br>
+            <br>
+            <p>
               Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
               werkzaam als<br /> contractmanager en <br />business analist.</p>
             </div>
