added images to diensten

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -86,6 +86,7 @@
       <h1 class="dienst_header">DIENSTEN</h1>
       <section class="kwaliteiten">
         <div>
+          <img src="creativiteit.png" alt="creativiteit icon">
           <h2>CREATIVITEIT</h2>
           <br>
           <br>
@@ -95,7 +96,6 @@
           </p>
         </div>
         <div>
-         
           <h2>TIMMEREN</h2>
           <br>
           <br>
@@ -105,7 +105,7 @@
             weten.</p>
           </div>
           <div>
-            <img src="managemtn.png" alt="MANAGEMENT_icon">
+            <img src="management.png" alt="management icon">
             <h2>MANAGEMENT</h2>
             <br>
             <br>
@@ -118,9 +118,7 @@
         </section>
       </main>
       <footer>
-        <h1 class="CONTACT_Class">
-          CONTACT
-        </h1>
+        <h1 class="CONTACT_Class">CONTACT</h1>
         <svg class="Naam" viewBox="0 0 365 1">
           <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
           stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Naam_Class" d="M 365 0 L 0 0">
