added copyrghit right

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -83,81 +83,67 @@
     </div>
   </section>
   <section class="diensten">
-      <h1 class="dienst_header">DIENSTEN</h1>
-      <section class="kwaliteiten">
-        <div>
-          <img src="creativiteit.png" alt="creativiteit icon">
-          <h2>CREATIVITEIT</h2>
-          <br>
-          <br>
-          <p>
-            Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
-            metaal <br />gaan verwerken.
-          </p>
+    <h1 class="dienst_header">DIENSTEN</h1>
+    <section class="kwaliteiten">
+      <div>
+        <img src="creativiteit.png" alt="creativiteit icon">
+        <h2>CREATIVITEIT</h2>
+        <br>
+        <br>
+        <p>
+          Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
+          metaal <br />gaan verwerken.
+        </p>
+      </div>
+      <div>
+        <h2>TIMMEREN</h2>
+        <br>
+        <br>
+        <p>
+          Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
+          ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
+          weten.</p>
         </div>
         <div>
-          <h2>TIMMEREN</h2>
+          <img src="management.png" alt="management icon">
+          <h2>MANAGEMENT</h2>
           <br>
           <br>
           <p>
-            Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
-            ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
-            weten.</p>
+            Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
+            werkzaam als<br /> contractmanager en <br />business analist.</p>
           </div>
-          <div>
-            <img src="management.png" alt="management icon">
-            <h2>MANAGEMENT</h2>
-            <br>
-            <br>
-            <p>
-              Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
-              werkzaam als<br /> contractmanager en <br />business analist.</p>
-            </div>
-          </section>
-          
         </section>
-      </main>
-      <footer>
-        <h1 class="CONTACT_Class">CONTACT</h1>
-        <svg class="Naam" viewBox="0 0 365 1">
-          <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-          stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Naam_Class" d="M 365 0 L 0 0">
-        </path>
-      </svg>
-      <svg class="E_mail" viewBox="0 0 365 1">
-        <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-        stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="E_mail_Class" d="M 0 0 L 365 0">
-      </path>
-    </svg>
-    <svg class="Onderwerp" viewBox="0 0 791 1">
-      <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-      stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Onderwerp_Class" d="M 0 0 L 791 0">
-    </path>
-  </svg>
-  <svg class="Bericht" viewBox="0 0 791 1">
-    <path fill="transparent" stroke="rgba(255,255,255,1)" stroke-width="1px" stroke-linejoin="miter"
-    stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" class="Bericht_Class" d="M 0 0 L 791 0">
-  </path>
-</svg>
-<div class="Naam_b_Class">
-  <span>Naam</span>
-</div>
-<div class="Email_Class">
-  <span>Email</span>
-</div>
-<div class="Onderwerp_cb_Class">
-  <span>Onderwerp</span>
-</div>
-<div class="Bericht_cc_Class">
-  <span>Bericht</span>
-</div>
-<div class="Verstuur_Class">
-  <span>Verstuur</span>
-</div>
-<div class="copyright">
-  <span>© 2021 by Olivier Wittop & Peter Pütmann</span>
-</div>
-</footer>
-</body>
-
-</html>
+        
+      </section>
+    </main>
+    <footer>
+      <h1 class="CONTACT_Class">CONTACT</h1>
+      <form action="./email" method="post">
+        <div>
+          <input type="text" name="naam" id="naam">
+          <label for="naam">Naam</label>
+        </div>
+        <div>
+          <input type="email" name="Email" id="Email">
+          <label for="Email">Email</label>
+        </div>
+        <br>
+        <div>
+          <input type="text" name="Onderwerp" id="Onderwerp">
+          <label for="Onderwerp">Onderwerp</label>
+        </div>
+        <br>
+        <div>
+          <input type="text" name="Bericht" id="Bericht">
+          <label for="Bericht">Bericht</label>
+        </div>
+        <br>
+        <input type="button" value="Verstuur">
+      </form>
+      <div class="copyright">
+        <p>© 2021 by Olivier Wittop Koning & Peter Pütmann</p>
+      </div>
+    </footer>
+  </body>
+  </html>
