fixed padding and added new form for contact

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -31,7 +31,7 @@
   PeterBuild
 </p>
 <div class="header_text_Class">
-  <span>Ik ben Peter Püttmann, 57 jaar.<br />Ik hou van het maken met hout.</span>
+  <span>Ik ben Peter Püttmann, 57 jaar.<br/>Ik hou van het maken met hout.</span>
 </div>
 </header>
 <main>
@@ -40,21 +40,21 @@
       NIET ALLEEN EEN<br/>TIMMERMAN
     </p>
     <p class="InfoAbout">
-      In mijn studietijd ben ik in Schoonhoven opgeleid <br />als edelsmid, hoewel ik hier niet actief mee aan
-      de slag <br />ben gegaan ben ik altijd creatief bezig geweest.
+      In mijn studietijd ben ik in Schoonhoven opgeleid <br/>als edelsmid, hoewel ik hier niet actief mee aan
+      de slag <br/>ben gegaan ben ik altijd creatief bezig geweest.
     </p>
     <div class="feedback">
       <div>
         <p>95%</p>
-        <span>van de klanten vind<br /> geeft ons een 10!</span>
+        <span>van de klanten vind<br/> geeft ons een 10!</span>
       </div>
       <div>
         <p>95%</p>
-        <span>van de klanten vind<br /> geeft ons een 10!</span>
+        <span>van de klanten vind<br/> geeft ons een 10!</span>
       </div>
       <div>
         <p>95%</p>
-        <span>van de klanten vind<br /> geeft ons een 10!</span>
+        <span>van de klanten vind<br/> geeft ons een 10!</span>
       </div>
     </div>
   </section>
@@ -91,8 +91,8 @@
         <br>
         <br>
         <p>
-          Momenteel werk ik <br />voornamelijk met hout, <br />maar in 2021 wil ik mijn<br /> creativiteit ook in
-          metaal <br />gaan verwerken.
+          Momenteel werk ik <br/>voornamelijk met hout, <br/>maar in 2021 wil ik mijn<br/> creativiteit ook in
+          metaal <br/>gaan verwerken.
         </p>
       </div>
       <div>
@@ -100,8 +100,8 @@
         <br>
         <br>
         <p>
-          Ook voor kleine klussen in<br /> en om het huis ben ik in te <br />zetten, geen probleem te<br /> lastig,
-          ik los het wel op.<br />Mocht ik iets voor je<br /> kunnen betekenen? laat het <br />hier onder dan
+          Ook voor kleine klussen in<br/> en om het huis ben ik in te <br/>zetten, geen probleem te<br/> lastig,
+          ik los het wel op.<br/>Mocht ik iets voor je<br/> kunnen betekenen? laat het <br/>hier onder dan
           weten.</p>
         </div>
         <div>
@@ -110,36 +110,28 @@
           <br>
           <br>
           <p>
-            Tijdens mijn loopbaan ben ik<br /> werkvoorbereider en<br /> inkoper geweest, en ben<br /> momenteel
-            werkzaam als<br /> contractmanager en <br />business analist.</p>
+            Tijdens mijn loopbaan ben ik<br/> werkvoorbereider en<br/> inkoper geweest, en ben<br/> momenteel
+            werkzaam als<br/> contractmanager en <br/>business analist.</p>
           </div>
         </section>
         
       </section>
     </main>
     <footer>
-      <h1 class="CONTACT_Class">CONTACT</h1>
+      <h1 class="header">CONTACT</h1>
       <form action="./email" method="post">
-        <div>
-          <input type="text" name="naam" id="naam">
-          <label for="naam">Naam</label>
-        </div>
-        <div>
-          <input type="email" name="Email" id="Email">
-          <label for="Email">Email</label>
-        </div>
+        <input type="text" name="naam" id="naam" placeholder="Naam">
+        <label for="naam">Naam</label>
+        <input type="email" name="Email" id="Email" placeholder="Email">
+        <label for="Email">Email</label>
         <br>
-        <div>
-          <input type="text" name="Onderwerp" id="Onderwerp">
-          <label for="Onderwerp">Onderwerp</label>
-        </div>
+        <input type="text" name="Onderwerp" id="Onderwerp" placeholder="Onderwerp">
+        <label for="Onderwerp">Onderwerp</label>
         <br>
-        <div>
-          <input type="text" name="Bericht" id="Bericht">
-          <label for="Bericht">Bericht</label>
-        </div>
+        <input type="text" name="Bericht" id="Bericht" placeholder="Bericht">
+        <label for="Bericht">Bericht</label>
         <br>
-        <input type="button" value="Verstuur">
+        <button type="submit">Verstuur</button>
       </form>
       <div class="copyright">
         <p>© 2021 by Olivier Wittop Koning & Peter Pütmann</p>
