Fixed some cnetering problems

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -66,19 +66,25 @@
     <br>
     <div class="protofolio">
       <div>
-        <h1>PROJECT<br/>TITEL</h1>
+        <h1>PROJECT<br/>KAPSCHUUR</h1>
         <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img src="project.png">
+        <a href="/project-kapschuur.html">
+          <img src="kapschuur.jpg" id="kapschuur" alt="kapschuur">
+        </a>
       </div>
       <div>
-        <h1>PROJECT<br/>TITEL</h1>
+        <h1>STEIGERHOUTEN<br/>LAMP</h1>
         <svg ><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img src="project_br.png">
+        <a href="/project-steigerhouten-lamp.html" alt="kapschuur">
+          <img src="3-laags-lamp.jpg" id="steigerhouten-lamp" alt="steigerhouten-lamp">
+        </a>
       </div>
       <div>
         <h1>PROJECT<br/>TITEL</h1>
         <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <img src="project_bu.png">
+        <a href="#">
+          <img src="coming.jpg">
+        </a>
       </div>
     </div>
   </section>
