--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -80,10 +80,10 @@
         </a>
       </div>
       <div>
-        <h1>PROJECT<br/>TITEL</h1>
+        <h1>COMING<br/>SOON</h1>
         <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
         <a href="#">
-          <img src="coming.jpg">
+          <img src="coming-soon.png">
         </a>
       </div>
     </div>
