added webshop css

--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="PeterBuild - timmer wat er te timmeren valt">
+  <meta name="apple-mobile-web-app-capable" content="no">
+  <meta property="og:description" content="PeterBuild" />
+  <meta property="og:title" content="PeterBuild - TimmerMan" />
+  <link rel="apple-touch-startup-image" href="creativiteit.png">
+  <meta name="theme-color" content="#d3a020">
+  <link rel="shortcut icon" href="creativiteit.png">
+  <meta property="og:image:alt" content="PeterBuild Logo" />
+  <meta property="og:type" content="website" />
+  <link rel="apple-touch-icon" sizes="512x512" href="creativiteit.png">
+  <link rel="apple-touch-icon" href="creativiteit.png">
+  <link rel="apple-touch-startup-image" href="creativiteit.png">
+  <link rel="shortcut icon" href="creativiteit.png">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="PeterBuild">
+  <meta http-equiv="Cache-control" content="public, max-age=604800">
+  <link rel="preconnect" href="https://raw.githubusercontent.com">
   <title>Vite PeterBuild</title>
   <link rel="stylesheet" href="./style.css">
   <script type="module">
@@ -29,7 +47,7 @@
       <div class="overlay-content">
         <a href="#contact">Contact</a>  
         <a href="#projecten">Projecten</a>
-        <a href="/shop.html">Webshop</a>
+        <a href="webshop.html">Webshop</a>
       </div>
     </div>
   </nav>
