--- a/vite-porject/webshop.html
+++ b/vite-porject/webshop.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebShop</title>
+    <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <h1>shop</h1>
+    <main>
+        <h1 id="header">WebShop</h1>
+        <section>
+            <img src="./3-laags-lamp.jpg" alt="foto van het bouwen van een goede kapschuur">
+        </section>
+    </main>
 </body>
 </html>
