--- a/vite-porject/product.html
+++ b/vite-porject/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
     <link rel="stylesheet" href="product.css">
+    <script type="module" src="product.js"></script>
 </head>
 <body>
     <main>
