--- a/vite-porject/index.html
+++ b/vite-porject/index.html
@@ -111,14 +111,14 @@
       <div>
         <h1>PROJECT<br/>KAPSCHUUR</h1>
         <svg><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <a href="/project-kapschuur.html">
+        <a href="project-kapschuur.html">
           <img src="kapschuur.jpg" id="kapschuur" alt="kapschuur">
         </a>
       </div>
       <div>
         <h1>STEIGERHOUTEN<br/>LAMP</h1>
         <svg ><line x1="0" y1="5" x2="326" y2="5" style="stroke:#2c7fd3;stroke-width:5"/></svg>
-        <a href="/project-steigerhouten-lamp.html" alt="kapschuur">
+        <a href="project-steigerhouten-lamp.html" alt="kapschuur">
           <img src="3-laags-lamp.jpg" id="steigerhouten-lamp" alt="steigerhouten-lamp">
         </a>
       </div>
