--- a/vite-porject/product.html
+++ b/vite-porject/product.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
     <link rel="stylesheet" href="product.css">
+    <script src="https://js.stripe.com/v3/"></script>
     <script type="module" src="product.js"></script>
 </head>
 <body>
+    <pre id="error-message"></pre>
     <main>
     </main>
 </body>
