--- a/vite-porject/email.html
+++ b/vite-porject/email.html
@@ -12,14 +12,13 @@
 </body>
 <script type="module">
     let text = document.getElementById('text');
-    
-    let qeury = window.location.search.substring(1).split("&");
-    let qeurys = {};
-    for (let i = 0; i < qeury.length; i++) {
-        let Lqeury = qeury[i].split("=");
-        qeurys[Lqeury[0]] = decodeURIComponent(Lqeury[1]);
-    }
-    console.log(window.location.search, qeurys);
-    text.innerText = JSON.stringify(qeurys);
+    let urlParams = new URLSearchParams(window.location.search);
+    let qeury = "";
+    let qeurys = urlParams.forEach((param, key) => {
+        console.log(key+": "+ param);
+        qeury += "<br>"+key + ": " + param;
+    });
+
+    text.innerHTML = qeury;
 </script>
 </html>
