fixed vite server

--- a/vite-porject/product.html
+++ b/vite-porject/product.html
@@ -7,7 +7,7 @@
     <title>Product</title>
     <link rel="stylesheet" href="product.css">
     <script src="https://js.stripe.com/v3/"></script>
-    <script type="module" src="product.js"></script>
+    <script type="module" src="./product.js"></script>
 </head>
 <body>
     <pre id="error-message"></pre>
